--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,18 @@
 <resources>
     <string name="app_name">Pharmacy</string>
-    <string name="profile">Profile</string>
-    <string name="home">Home</string>
+    <string name="profile">Профиль</string>
+    <string name="home">Дом</string>
 
     <string name="medicine_description">Описание:</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="not_yet_registered_sign_up_now">Not yet registered? Sign Up Now</string>
-    <string name="sign_in">Sign In</string>
-    <string name="password">Password</string>
-    <string name="username">Username</string>
-    <string name="confirm_password">Confirm Password</string>
-    <string name="sign_up">Sign Up</string>
+    <string name="not_yet_registered_sign_up_now">Еще не зарегистрированы? Зарегистрироваться</string>
+    <string name="sign_in">Войти</string>
+    <string name="password">Пароль</string>
+    <string name="username">Имя пользователя</string>
+    <string name="confirm_password">Подтверждение пароля</string>
+    <string name="sign_up">Регистрация</string>
+    <string name="enter_medicine">Введите название лекарства</string>
+    <string name="filter">Фильтр</string>
+    <string name="text_search_medicine">Поиск лекарств</string>
+    <string name="med_name">Имя</string>
+    <string name="test">Test</string>
 </resources>
