--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="favorites">Избранное</string>
     <string name="exit_account">Выйти из аккаунта</string>
     <string name="sign_in_main">Вход</string>
-    <string name="to_sign_up">Зарегистрировать</string>
+    <string name="to_sign_up">Зарегистрироваться</string>
     <string name="back">Назад</string>
     <string name="about">О программе</string>
     <string name="name">Нилов Владимир Владимирович</string>
@@ -37,12 +37,13 @@
     • Создавать список избранного: Сохраняйте часто используемые лекарства в удобном списке для быстрого доступа.
     </string>
     <string name="put_filter">Применить фильтр</string>
-    <string name="input_interactions">Введите как принимать лекарство</string>
-    <string name="interaction">Взаимодействие:</string>
+    <string name="interaction">Взаимодействие</string>
+    <string name="side_effects">Побочные эффекты</string>
+    <string name="dosage">Дозировка</string>
+    <string name="input_interactions">Как лекарство взамодейсвтвует с другим</string>
     <string name="input_side_effects">Введите побочные эффекты</string>
-    <string name="side_effects">Побочные эффекты:</string>
     <string name="input_dosage">Введите дозировку в мг или шт</string>
-    <string name="dosage">Дозировка:</string>
     <string name="filters">Фильтры для лекарств</string>
     <string name="type">Тип:</string>
+    <string name="clear_filters">Сбросить фильтры</string>
 </resources>
