--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,8 +46,6 @@
     <string name="filters">Фильтры для лекарств</string>
     <string name="type">Тип:</string>
     <string name="clear_filters">Сбросить фильтры</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="resources">Ресурсы</string>
     <string name="map_resources">Условия использования Яндекс.Карт</string>
     <string name="map_link">https://yandex.ru/legal/maps_termsofuse/</string>
@@ -61,4 +59,13 @@
     <string name="description_info_favorites">В этом разделе вы можете сохранить понравившиеся лекарства для быстрого доступа к их информации</string>
     <string name="title_info_history">Описание истории лекарств</string>
     <string name="description_info_history">В этом разделе вы можете увидеть список просмотренных вами лекарств</string>
+    <string name="change_email">Изменить почту</string>
+    <string name="change_name">Изменить имя пользователя</string>
+    <string name="change_font">Изменить размер шрифта</string>
+    <string name="input_name">Введите имя</string>
+    <string name="cancel">Отмена</string>
+    <string name="save">Сохранить</string>
+    <string name="small">Маленький</string>
+    <string name="medium">Средний</string>
+    <string name="large">Большой</string>
 </resources>
