--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,10 +31,11 @@
     <string name="app_description">
     Наше приложение позволяет: \n\n
     • Находить нужные лекарства: Просматривайте информацию о каждом препарате (описание, дозировка и тд)\n\n
-    • Использовать удобные фильтры: Быстро находите нужные лекарства по типам, дозировке и другим параметрам.\n\n
-    • Регистрируйтесь для получения доступа к расширенным функциям приложения: сохранение истории просмотров и списка избранных препаратов.\n\n
-    • Сохранять историю просмотров: Легко возвращайтесь к ранее просмотренным препаратам.\n\n
-    • Создавать список избранного: Сохраняйте часто используемые лекарства в удобном списке для быстрого доступа.
+    • Использовать удобные фильтры: Быстро находите нужные лекарства по типам, дозировке и другим параметрам\n\n
+    • Регистрируйтесь для получения доступа к расширенным функциям приложения: сохранение истории просмотров, изменение списка избранных препаратов и настройка шрифта приложения\n\n
+    • Сохранять историю просмотров (В аккаунте): Легко возвращайтесь к ранее просмотренным препаратам\n\n
+    • Создавать список избранного (В аккаунте): Сохраняйте часто используемые лекарства в удобном списке для быстрого доступа\n\n
+    • Изменять шрифт приложения (В аккаунте): Уменьшайте или увеличивайте размер шрифта\n
     </string>
     <string name="put_filter">Применить фильтр</string>
     <string name="interaction">Взаимодействие</string>
